# life-variations

./: Cargo.toml  README.md
settings/: config.toml
src/: config.rs  main.rs  world.rs
src/world/: grid.rs  life_cell.rs  population.rs  separator.rs  world.rs
