[package]
name = "life-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.*"
imageproc = "0.23.*"
rand = "0.8.*"
toml = "0.7.*"
serde = {version = "1.0.*", features = ["derive"]}